--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <title>Metro Car Detailing</title>
   <meta name="description" content="High performance car detailing">
   <meta name="keywords" content="car detailing car wash">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="./components/base.js"></script>
   <script src="./components/header.js"></script>
   <script src="./components/footer.js"></script>
